# TwitterBackup

./: .gitignore  LICENSE  README.md  config-example.toml  pyproject.toml
tools/: compress.sh
twb/: __init__.py  __main__.py  chain.py  collect.py  config.py  constants.py  twitter_gql.py  utils.py
twb/tools/: twb-compress
