[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "twitterbackup"
description = "Twitter backup crawler"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["twitter", "backup"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "toml~=0.10.2",
    "tweepy~=4.12.1",
    "requests~=2.28.1",
    "hypy_utils>=1.0.16",
    'importlib-metadata',
]
dynamic = ["version"]

[project.scripts]
my-script = "twb:main"
