[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "twb"
description = "Twitter backup crawler"
readme = "README.md"
authors = [
    { name = "Azalea Gui", email = "me@hydev.org" }
]
requires-python = ">=3.7"
keywords = ["twitter", "backup"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "toml~=0.10.2",
    "tweepy~=4.12.1",
    "requests~=2.28.1",
    "hypy_utils>=1.0.16",
    'importlib-metadata',
]
dynamic = ["version"]
urls = { Homepage = 'https://github.com/one-among-us/TwitterBackup' }

[tool.setuptools]
py-modules = ["twb"]
packages = ['twb']

[tool.setuptools.dynamic]
version = {attr = "twb.__version__"}

[project.scripts]
twb = "twb.__main__:run"
